--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,10 @@
     "postcss": "^8.4.47",
     "react-testing-library": "^8.0.1",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.8"
-  }
+    "vite": "^5.4.9"
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "author": "",
+  "license": "ISC"
 }
